# filestore

./: .gitignore  README.md  docker-compose.yaml  lefthook.yml
client/: .gitignore  eslint.config.js  index.html  package.json  prettier.toml  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  router.tsx
client/src/atoms/: authAtoms.ts  index.ts  uiAtoms.ts
client/src/components/: AuthLayout.tsx  Breadcrumbs.tsx  BucketCard.tsx  Button.tsx  Drawer.tsx  Dropdown.tsx  FileCard.tsx  FileRow.tsx  Icon.tsx  Input.tsx  MainLayout.tsx  Notification.tsx  Select.tsx  index.ts
client/src/enums/: IconEnums.ts  ModelEnums.ts  index.ts
client/src/hooks/: index.ts  useDarkMode.ts  useList.ts  useNotifications.ts  useRead.ts  useUpload.ts
client/src/pages/: BucketBrowser.tsx  FileBrowser.tsx  Login.tsx  Register.tsx  index.ts  routes.ts
client/src/schemas/: AuthSchemas.ts  BucketSchemas.ts  FileSchemas.ts  index.ts
client/src/types/: BaseAuthTypes.ts  BaseComponentTypes.ts  BaseFileTypes.ts  BaseRequestTypes.ts  BaseResponseTypes.ts  UtilityTypes.ts  index.ts
client/src/utils/: datetime.ts  fetch.ts  files.ts  form.ts  format.ts  index.ts  request.ts
scripts/hooks/: commit_msg.sh  lint.sh  type_check.sh
server/: Cargo.toml  Dockerfile
server/db/: schema.sql
server/db/migrations/: 20251023111751_add_users_table.sql  20251027091922_add_files_table.sql  20251027091922_add_images_table.sql  20251027092057_add_users_image_id_col.sql  20251129095713_add_unique_constraint_for_files.sql  20251129111547_add_pg_trgm_extension.sql  20251129112013_add_index_for_file_title_col.sql  20251130085721_add_tags_for_files.sql  20260110103844_add_hash_for_files.sql  20260112075724_add_buckets_table.sql  20260112080233_add_buckets_reference_for_files.sql  20260112080337_add_etag_for_files.sql
server/src/: consts.rs  main.rs
server/src/enums/: errors.rs  file_enums.rs  mod.rs  model_enums.rs  request_enums.rs  server_enums.rs  storage_enums.rs
server/src/middleware/: session_middleware.rs
server/src/models/: auth.rs  mod.rs  request.rs  response.rs  state.rs
server/src/routes/: auth_routes.rs  bucket_routes.rs  file_routes.rs  mod.rs
server/src/traits/: db_traits.rs
server/src/utils/: db_utils.rs  file_utils.rs  format_utils.rs  mod.rs  storage_utils.rs
