[package]
name = "filestore"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-sdk-s3 = "1.110.0"
axum = { version = "0.8.6", features = ["multipart"] }
axum-extra = { version = "0.12.0", features = ["cookie", "cookie-private", "typed-header"] }
convert_case = "0.8.0"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
deadpool-redis = { version = "0.22.0", features = ["serde", "json"] }
itertools = "0.14.0"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["net", "signal", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.15", features = ["with-jiff-0_2", "with-serde_json-1", "with-uuid-1"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["serde", "serde_json", "json", "tracing", "env-filter", "std"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
