[package]
name = "filestore"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
aws-sdk-s3 = "1.110.0"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.0", features = [
    "cookie",
    "cookie-private",
    "typed-header",
] }
base64 = "0.22.1"
blake3 = "1.8.3"
convert_case = "0.10.0"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
deadpool-redis = { version = "0.22.0", features = ["serde", "json"] }
fancy-regex = "0.17.0"
headers = "0.4.1"
itertools = "0.14.0"
jiff = { version = "0.2.15", features = ["serde"] }
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = [
    "net",
    "signal",
    "rt-multi-thread",
    "macros",
] }
tokio-postgres = { version = "0.7.15", features = [
    "with-jiff-0_2",
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "serde",
    "serde_json",
    "json",
    "tracing",
    "env-filter",
    "std",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
